--- a/Views/AddDeals/Index.cshtml
+++ b/Views/AddDeals/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Deals.AddDeal>
+﻿@model IEnumerable<Deals.Models.AddDeal>
 
 @{
     ViewBag.Title = "Index";
@@ -17,7 +17,7 @@
         <th>
             @Html.DisplayNameFor(model => model.item.pname)
         </th>
-        <th></th>
+      
     </tr>
 
 @foreach (var item in Model) {
